# adk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  mistralrs-tests.yml
adk-agent/: Cargo.toml
adk-agent/src/: guardrails.rs  lib.rs  llm_agent.rs
adk-agent/tests/: agent_callback_tests.rs  context_propagation_test.rs
adk-auth/: Cargo.toml  README.md
adk-auth/src/: access_control.rs  audit.rs  error.rs  lib.rs  middleware.rs  permission.rs  role.rs
adk-auth/src/sso/: claims.rs  error.rs  jwks.rs  mapper.rs  sso_access.rs  validator.rs
adk-auth/src/sso/providers/: auth0.rs  azure.rs  google.rs  oidc.rs  okta.rs
adk-auth/tests/: rbac_integration.rs  sso_integration.rs
adk-browser/: Cargo.toml
adk-browser/src/: config.rs  lib.rs  session.rs  toolset.rs
adk-browser/src/tools/: actions.rs  click.rs  cookies.rs  evaluate.rs  extract.rs  frames.rs  mod.rs  navigate.rs  screenshot.rs  type_text.rs  wait.rs  windows.rs
adk-graph/src/: executor.rs  node.rs
adk-guardrail/: Cargo.toml
adk-guardrail/src/: content.rs  error.rs  executor.rs  lib.rs  pii.rs  schema.rs  traits.rs
adk-model/: Cargo.toml  README.md
adk-model/src/: lib.rs
adk-runner/src/: context.rs  lib.rs  runner.rs
adk-runner/tests/: context_tests.rs
adk-rust/: Cargo.toml
adk-rust/src/: lib.rs
adk-studio/: Cargo.toml
adk-studio/src/: lib.rs
adk-ui/: Cargo.toml
adk-ui/src/: lib.rs  schema.rs  toolset.rs
adk-ui/src/tools/: mod.rs  render_alert.rs  render_card.rs  render_chart.rs  render_confirm.rs  render_form.rs  render_layout.rs  render_progress.rs  render_table.rs
docs/: ADK-STUDIO-FUNCTION-TOOLS.md
docs/roadmap/: adk-studio.md  adk-ui.md  authentication.md  cloud-integrations.md  dependency-updates.md  enterprise.md  guardrails.md
examples/: Cargo.toml
examples/auth_audit/: main.rs
examples/auth_basic/: main.rs
examples/auth_jwt/: main.rs
examples/auth_sso/: main.rs
examples/browser_basic/: main.rs
examples/browser_test/: main.rs
examples/debug_openai_error/: main.rs
examples/deepseek_caching/: main.rs
examples/deepseek_thinking_tools/: main.rs
examples/deepseek_tools/: main.rs
examples/function_tool/: main.rs
examples/guardrail_agent/: main.rs
examples/guardrail_basic/: main.rs
examples/ollama_basic/: main.rs
examples/ollama_mcp/: main.rs
examples/ollama_parallel/: main.rs
studio-ui/: package-lock.json  package.json
(+45 files in other folders)
