[package]
name = "adk-browser"
version = "0.1.0"
edition = "2021"
description = "Browser automation tools for Rust Agent Development Kit (ADK-Rust) agents using WebDriver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zavora-ai/adk-rust"
keywords = ["adk", "browser", "automation", "webdriver", "ai-agent","adk-rust"]
categories = ["web-programming", "development-tools"]

[dependencies]
adk-core = { path = "../adk-core", version = "0.1" }
thirtyfour = "0.35"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
base64 = "0.22"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
